# amrl_maps

./: .gitignore  CMakeLists.txt  Makefile  README.md  map_directory.json  package.xml
.github/workflows/: txtToJson.yml
AHG1/: AHG1.navigation.json  AHG1.vectormap.json  AHG1.vectormap.txt
AHG2/: AHG2.navigation.json  AHG2.navigation.txt  AHG2.vectormap.json  AHG2.vectormap.txt
AHG2_Track/: AHG2_Track.vectormap.json  AHG2_Track.vectormap.txt
AHG2v2/: AHG2v2.navigation.json  AHG2v2.vectormap.txt
AHGM/: AHGM.vectormap.txt
AHG_Apartment/: AHG_Apartment.navigation.json  AHG_Apartment.vectormap.json  AHG_Apartment.vectormap.txt
ASE4/: ASE4.vectormap.json  ASE4.vectormap.txt  ASE4.vectormap.txt.tmp1  ASE4.vectormap.txt.unscaled
Airsim-Neighborhood/: Airsim-Neighborhood.vectormap.json
Briefcase/: Briefcase.vectormap.json
Briefcase_Obstacles/: Briefcase_Obstacles.vectormap.json
CDL_Ground/: CDL_Ground.navigation.json  CDL_Ground.vectormap.json  CDL_Ground.vectormap.txt
CPS/: CPS.vectormap.json
EmptyMap/: EmptyMap.navigation.json
GDC1/: GDC1.navigation.json  GDC1.vectormap.json
GDC2/: GDC2.navigation.json
GDC2_Oden/: GDC2_Oden.navigation.json  GDC2_Oden.vectormap.json  GDC2_Oden.vectormap.txt
GDC_Track/: GDC_Track.json  GDC_Track.txt
HareshAHG/: HareshAHG.navigation.json  HareshAHG.vectormap.json  HareshAHG.vectormap.txt
HareshAHGNew/: HareshAHGNew.navigation.json  HareshAHGNew.vectormap.json  HareshAHGNew.vectormap.txt
ICRA2022_F1Tenth_Track/: ICRA2022_F1Tenth_Track.navigation.json  ICRA2022_F1Tenth_Track.raceline  ICRA2022_F1Tenth_Track.vectormap.json  ICRA2022_F1Tenth_Track.vectormap.txt
Joydeepb-Driveway/: Joydeepb-Driveway.navigation.txt  Joydeepb-Driveway.txt  Joydeepb-Driveway.vectormap.json  Joydeepb-Driveway.vectormap.txt
Joydeepb-Home/: Joydeepb-Home.txt
Obstacle_Hallway/: Obstacle_Hallway.vectormap.json  Obstacle_Hallway.vectormap.txt
Park_traj_1/: Park_traj_1.vectormap.txt
Park_traj_2/: Park_traj_2.vectormap.txt
SXSW2024/: SXSW2024.navigation.json
SimHallway/: SimHallway.navigation.txt  SimHallway.vectormap.txt
SimHallway/SimHallway/: SimHallway.navigation.txt  SimHallway.vectormap.json  SimHallway.vectormap.txt
Social-Navigation/: Social-Navigation.vectormap.json  Social-Navigation.vectormap.txt
UT_AUTOmata_GDC1_Track/: UT_AUTOmata_GDC1_Track.vectormap.json  UT_AUTOmata_GDC1_Track.vectormap.txt
UT_AUTOmata_Track/: UT_AUTOmata_Track.vectormap.json  UT_AUTOmata_Track.vectormap.txt
UT_AUTOmata_Track_New/: UT_AUTOmata_Track_New.navigation.txt  UT_AUTOmata_Track_New.vectormap.json  UT_AUTOmata_Track_New.vectormap.txt
UT_Campus/: UT_Campus.gpsmap.txt  UT_Campus.navigation.json  UT_Campus.navigation.txt  UT_Campus.vectormap.json  UT_Campus.vectormap.txt
UT_Campus_With_Stairs/: UT_Campus_With_Stairs.navigation.json  UT_Campus_With_Stairs.navigation.txt  UT_Campus_With_Stairs.vectormap.json  UT_Campus_With_Stairs.vectormap.txt
maps/AHG2/: AHG2.vectormap.json
maps/AHG2v2/: AHG2v2.vectormap.json
maps/Briefcase/: Briefcase.vectormap.txt
maps/Briefcase_Obstacles/: Briefcase_Obstacles.vectormap.json  Briefcase_Obstacles.vectormap.txt
maps/GDC3/: GDC3.navigation.json
maps/ICRA2022_F1Tenth_Track/: ICRA2022_F1Tenth_Track.racingline
maps/SXSW2024/: SXSW2024.vectormap.json  SXSW2024.vectormap.txt
maps/UT_Campus/: UT_Campus.vectormap.json
utility_scripts/: automate_txt_to_json.py  clean_map.py  create_racing_line.py  create_synthetic_map.py  map_scaler.py
